updating readme, removing excess dependencies

--- a/api/package.json
+++ b/api/package.json
@@ -9,7 +9,6 @@
   "dependencies": {
     "express": "^4.17.1",
     "express-fileupload": "^1.1.6-alpha.5",
-    "express-validator": "^6.2.0",
-    "formidable": "^1.2.1"
+    "express-validator": "^6.2.0"
   }
 }
