--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "react-redux": "^7.1.0",
     "react-scripts": "3.1.1",
     "react-test-renderer": "^16.8.6",
-    "styled-components": "^4.3.2",
-    "react-router-dom": "^5.0.0"
+    "styled-components": "^4.3.2"
   },
   "scripts": {
     "start": "npx concurrently \"npm run start:api\" \"npm run start:react\"",
